Final Build for G24
General mods with over all minor changes. All clean, all working!

--- a/template-test.html
+++ b/template-test.html
@@ -27,7 +27,9 @@
     </ul><li>power_rating</li><ul>
       <li>XXXXXXpower_ratingXXXXXX</li>
     </ul><li>occurrence</li><ul>
-      <li>XXXXXXoccurrenceXXXXXX</li>            
+      <li>XXXXXXoccurrenceXXXXXX</li>
+    </ul><li>country</li><ul>
+      <li>XXXXXXcountryXXXXXX</li>                  
     </ul><li>rarity</li><ul>
       <li>XXXXXXrarityXXXXXX</li>
     </ul><li>card_group_lookup</li><ul>
